--- a/style.css
+++ b/style.css
@@ -39,18 +39,30 @@ nav ul {
     list-style-type:none;
     padding: 0;
     display: flex;
+    /* align-items: center; */
+    /* justify-content:space-between; */
 }
-
+nav li {
+    flex: 1 auto;
+}
 nav li a {
     background-color:#2D99A4;
+    display: block;
+    display:flex;
     padding:1rem 2rem;
+    text-align: center;
 }
 
 nav a.active {
     background-color:#fff;
-    background-color:#026e78;
+    color:#026e78;
+    font-weight: 100%;
 }
 nav a.highlight {
     background-color:#026e78;
     color:#fff;
+}
+
+nav a:hover{
+    opacity: 0.9;
 }
