--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ a {
     margin:0 auto;  
     flex-direction: column; 
     padding: 1rem;
+    height:100%;
 }
 nav {
     padding:0.5rem 0;
@@ -74,8 +75,10 @@ nav a:hover{
 }
 
 .content {
+    background-color:purple;
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: ;
+    justify-content:center;
+    /* align-items:center; */
 }
